src/ingress/deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/issuer: letsencypt
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - todo-aks-cluster.centralus.cloudapp.azure.com
      secretName: letsencrypt
  rules:
  - host: demo-aks-ingress.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-web
          servicePort: 80
      - path: /api/
        backend:
          serviceName: todo-api
          servicePort: 80
