src/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - todo-aks-cluster.centralus.cloudapp.azure.com
      secretName: todo-aks-cluster-com-tls
  rules:
  - host: todo-aks-cluster.centralus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-web
          servicePort: 80
      - path: /api/
        backend:
          serviceName: todo-api
          servicePort: 80
